# c8rs

./: Cargo.toml
c8rs/: Cargo.toml
c8rs-core/: Cargo.toml
c8rs-core/src/: cpu.rs  debug.rs  display.rs  instructions.rs  lib.rs  memory.rs
c8rs-disasm/: Cargo.toml
c8rs-disasm/src/: lib.rs
c8rs-tui/: Cargo.toml
c8rs-tui/src/: app.rs  lib.rs  tui.rs
c8rs-tui/src/components/: cpu.rs  debug.rs  disasm.rs  display.rs  log.rs  mem.rs  mod.rs
c8rs/src/: main.rs
roms/: test.ch8
