[package]
name = "c8rs-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
c8rs-core = { path = "../c8rs-core" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
log = "0.4"
ratatui = "0.28"
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"
tui-logger = { version = "0.12", features = ["tracing-support"] }
